[package]
name = "firefly-runtime"
version = "0.1.0"
rust-version = "1.89.0"
edition = "2021"

[dependencies]
embedded-graphics = "0.8.1"
embedded-io = "0.6.1"
firefly-audio = "0.2.1"
firefly-hal = "0.3.1"
firefly-types = { version = "0.7.1" }
heapless = { version = "0.9.2", features = ["serde"] }
micromath = "2.1.0"
postcard = "1.0.8"
tinyqr = "0.14.1"
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
wasmi = { version = "1.0.6", default-features = false }
