[package]
name = "firefly-runtime"
version = "0.12.0"
rust-version = "1.91.0"
edition = "2024"
description = "The beating heart of Firefly Zero"
license = "GPL-3.0"
repository = "https://github.com/firefly-zero/firefly-runtime"

[dependencies]
embedded-graphics = "0.8.2"
embedded-io = "0.6.1"
firefly-audio = "0.3.0"
firefly-hal = "0.5.0"
firefly-types = "0.11.0"
heapless = { version = "0.9.3", features = ["serde"] }
micromath = "2.1.0"
postcard = "1.0.8"
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
tinyqr = "0.14.1"
wasmi = { version = "1.0.9", default-features = false }

[patch.crates-io]
firefly-hal = { path = "../firefly-hal" }
